Changes for 1.5.1
* Fixing getBestRoute to never use impassible and restricted territories. (veqryn)

* Adding Global 1940 as test xml. (veqryn)

* Fixing weird tech attachment getters to use booleans rather than strings. (veqryn)

* Making sure that all attachment variables that start out as Null, can return to being null again through their setter. (veqryn)

* Fixing various errors introduced into casualty selection. (veqryn)

* Fixed null pointer error for players who have damaged units but no repair frontier. (veqryn)

* Adding Europe 1940 as test xml. (veqryn)

* Fixed more "Lock not held" errors, and a potential null pointer in the battle calculator. (veqryn)

* Possible fix for ConcurrentModificationException in BattleModel.refresh -> DiceRoll.isAmphibiousMarine -> BattleTracker.getPendingBattleSites. (veqryn)

* Fixing bug with displaying up total resources when more than one unit creates resources. (veqryn)

* Allowed users to use Edit Mode to create new units for normal players, based on both their production frontier and any units they have on the board. (veqryn)

* Allowing users to use Edit Mode to create and place new "Neutral" (null player) units, but only selecting from ones on the board. (veqryn)

* Allowing users to Battle Calc against any "Neutral" (null player) units that are still on the board. (veqryn)

* Fixing casting error bug introduced into battle calc. (veqryn)

* Changing airfields and harbours to stop being operational at 3 damage, instead of 4. (veqryn)

* Fixed bug where you were not allowed zero (0) for the unitPresence count. (veqryn)

* Making the check to see if you can do the purchase phase, the same for both humans and AIs. (veqryn)

* Fixed null pointer error for when a player runs low on resources. (veqryn)

* Fixing a couple "Lock not held" errors. (veqryn)

* Fixed the Battle Calculator not displaying combat units with 'AA' abilities. (veqryn)
